--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : kd's site
 tagline: Site Tagline
 author :
-  name : Name Lastname
+  name : kd
   email : blah@email.test
-  github : username
+  github : kdii
   twitter : username
   feedburner : feedname
 
@@ -26,7 +26,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.com
+production_url : http://kdii.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
