--- a/_config.yml
+++ b/_config.yml
@@ -5,17 +5,18 @@ permalink: /:categories/:year/:month/:day/:title
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
 pygments: true
+paginate: 10
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : kd's blog
+tagline: kd's blog
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : kd
+  email : kdiimeme@gmail.test
+  github : kdii
+  twitter : kdii
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
@@ -26,7 +27,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.com
+production_url : http://kdii.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -72,7 +73,7 @@ JB :
   #
   archive_path: /archive.html
   categories_path : /categories.html
-  tags_path : /tags.html
+  
   atom_path : /atom.xml
   rss_path : /rss.xml
 
